
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-08-29 MH  1.6.0  Add a New Window menu/toolbar to the query tool.
2006-08-15 DP  1.6.0  Set focus on the filter textbox when opening the View
                      data filter options [Guillaume Lelarge]
2006-08-15 DP  1.6.0  Auto-select the next item when removing columns from 
                      the View Data sort options dialog [Guillaume Lelarge]
2006-07-21 DP  1.4.4  Fix custom vacuum settings editting, per Benjamin 
                      Krajmalnik
2006-07-18 DP  1.4.3  Display job steps and schedules properly in the Job
                      dialogue, per Eric Shuman.
2006-07-17 DP  1.4.3  Display interval precision properly, per Walter Haslbeck
2006-07-04 DP  1.6.0  Make elements of the main windows dockable for 
                      maximum configurability.
2006-07-04 DP  1.6.0  Add 'scratch pads' to the Edit Grid and Query Tool
                      windows to use when copying and pasting data back
                      and forth.
2006-07-04 DP  1.6.0  Add a proper menu to the Edit Grid window.
2006-06-30 DP  1.4.3  Return the script return value when executing shell
                      scripts from pgAgent, per Eric Shuman
2006-06-22 DP  1.4.3  Use a slider instead of a spin control to avoid a
                      wxGTK bug on the status form, per Peter Eisentraut.
2006-06-15 DP  1.6.0  Add a new Find & Replace dialogue to the query tool,
                      implementing all the normal Find & Replace options as
                      well as a powerful regular expression search mode.
2006-06-15 DP  1.6.0  Add a pgAgent option to log to a file on *nix [Jeremy
                      Palmer]