@@ -21,8 +21,14 @@ when starting it.
       entered when you added the server to the treeview in pgAdmin, quoted if required. If multiple servers are registered with 
       the same description, the first found will be auto-connected.<br />&nbsp;</li>
 
-  <li><b>-q</b> Open a <a href="query.html">Query Tool</a> window upon connection. This option requires the 
-      <b>-s &lt;server description&gt;</b> option.<br />&nbsp;</li>
+  <li><b>-q</b> Open a <a href="query.html">Query Tool</a> window upon connection. If used together with the 
+      <b>-s &lt;server description&gt;</b> option, the query tool will automatically be connected to this server.
+      If used alone, a dialog box will appear prompting for the connection information. This switch cannot be used
+      together with the <b>-qc &lt;connection string&gt;</b> option.<br />&nbsp;</li>
+      
+  <li><b>-qc &lt;connection string&gt;</b> Open a <a href="query.html">Query Tool</a> window upon connection. The query tool
+      will automatically be connected to the server specified in the connection string. This option cannot be used
+      together with the <b>-q</b> switch.<br />&nbsp;</li>
 
   <li><b>-cm &lt;config file&gt;</b> Edit the specified postgresql.conf config file.<br />&nbsp;</li>
 
