@@ -16,6 +16,7 @@
 
 #include "frmMain.h"
 #include "dlgSelectConnection.h"
+#include "dlgConnect.h"
 #include "pgServer.h"
 #include "images/connect.xpm"
 
@@ -23,6 +24,8 @@
 BEGIN_EVENT_TABLE(dlgSelectConnection, DialogWithHelp)
     EVT_COMBOBOX(XRCID("cbServer"),   dlgSelectConnection::OnChangeServer) 
     EVT_COMBOBOX(XRCID("cbDatabase"),   dlgSelectConnection::OnChangeDatabase) 
+	EVT_TEXT(XRCID("cbServer"),        dlgSelectConnection::OnTextChange)
+	EVT_TEXT(XRCID("cbDatabase"),      dlgSelectConnection::OnTextChange)
     EVT_BUTTON (wxID_OK,               dlgSelectConnection::OnOK)
     EVT_BUTTON (wxID_CANCEL,           dlgSelectConnection::OnCancel)
 END_EVENT_TABLE()
@@ -30,6 +33,8 @@ END_EVENT_TABLE()
 
 #define cbServer        CTRL_COMBOBOX("cbServer")
 #define cbDatabase      CTRL_COMBOBOX("cbDatabase")
+#define stUsername		CTRL_STATIC("stUsername")
+#define txtUsername		CTRL_TEXT("txtUsername")
 
 
 
@@ -38,11 +43,25 @@ DialogWithHelp(form)
 {
     wxLogInfo(wxT("Creating a select connection dialogue"));
 
+	remoteServer = NULL;
+
     wxWindowBase::SetFont(settings->GetSystemFont());
     LoadResource(parent, wxT("dlgSelectConnection"));
 
     SetIcon(wxIcon(connect_xpm));
     CenterOnParent();
+
+	if (form != NULL)
+	{
+		stUsername->Hide();
+		txtUsername->Hide();
+	}
+	else
+	{
+		cbServer->SetValue(settings->Read(wxT("QuickConnect/server"), wxEmptyString));
+		cbDatabase->SetValue(settings->Read(wxT("QuickConnect/database"), wxEmptyString));
+		txtUsername->SetValue(settings->Read(wxT("QuickConnect/username"), wxEmptyString));
+	}
 }
 
 
@@ -60,6 +79,9 @@ wxString dlgSelectConnection::GetHelpPage() const
 
 void dlgSelectConnection::OnChangeServer(wxCommandEvent& ev)
 {
+	if (!GetServer())
+		return;
+
     cbDatabase->Clear();
 
     int sel=cbServer->GetCurrentSelection();
@@ -120,15 +142,26 @@ wxString dlgSelectConnection::GetDatabase()
     return cbDatabase->GetValue();
 }
 
+wxString dlgSelectConnection::GetServerName()
+{
+	return cbServer->GetValue();
+}
 
 void dlgSelectConnection::OnChangeDatabase(wxCommandEvent& ev)
 {
     btnOK->Enable(cbDatabase->GetCount() > 0 && cbDatabase->GetCurrentSelection() >= 0);
 }
 
+void dlgSelectConnection::OnTextChange(wxCommandEvent& ev)
+{
+	btnOK->Enable(cbDatabase->GetValue().Len() > 0 && cbServer->GetValue().Len() > 0 && txtUsername->GetValue().Len() > 0);
+}
 
 void dlgSelectConnection::OnOK(wxCommandEvent& ev)
 {
+	if (cbDatabase->GetCurrentSelection() == wxNOT_FOUND ||
+		cbServer->GetCurrentSelection() == wxNOT_FOUND)
+		remoteServer = NULL;
     EndModal(wxID_OK);
 }
 
@@ -138,22 +171,70 @@ void dlgSelectConnection::OnCancel(wxCommandEvent& ev)
     EndModal(wxID_CANCEL);
 }
 
+pgConn *dlgSelectConnection::CreateConn()
+{
+	if (GetServer())	/* Running with access to the main form with the object tree */
+		return GetServer()->CreateConn(GetDatabase());
+	else
+		return CreateConn(GetServerName(), GetDatabase(), txtUsername->GetValue(), 0, 0, true);
+}
+
+pgConn *dlgSelectConnection::CreateConn(wxString& server, wxString& dbname, wxString& username, int port, int sslmode, bool writeMRU)
+{
+	pgConn *newconn;
+	newconn = new pgConn(server, dbname, username, wxT(""), port, sslmode);
+	if (newconn->GetStatus() != PGCONN_OK &&
+		newconn->GetLastError().Cmp(wxString(PQnoPasswordSupplied, wxConvUTF8)) == 0)
+	{
+		/* Needs password */
+		delete newconn;
+		newconn = NULL;
+
+        wxString txt;
+        txt.Printf(_("Please enter password for user %s\non server %s"), username, server);
+		dlgConnect dlg(NULL, txt, false);
+		if (dlg.Go() != wxID_OK)
+			return NULL;
+
+		newconn = new pgConn(server, dbname, username, dlg.GetPassword(), port, sslmode);
+	}
+
+	if (newconn)
+	{
+		if (newconn->GetStatus() != PGCONN_OK)
+		{
+			wxMessageBox(wxT("Connection failed: ") + newconn->GetLastError());
+			return NULL;
+		}
+
+		if (writeMRU)
+		{
+			settings->Write(wxT("QuickConnect/server"), cbServer->GetValue());
+			settings->Write(wxT("QuickConnect/database"), cbDatabase->GetValue());
+			settings->Write(wxT("QuickConnect/username"), txtUsername->GetValue());
+		}
+	}
+	return newconn;
+}
 
 int dlgSelectConnection::Go(pgConn *conn, ctlComboBoxFix *cb)
 {
     cbConnection=cb;
-    treeObjectIterator servers(mainForm->GetBrowser(), mainForm->GetServerCollection());
-    pgServer *s;
+	if (mainForm != NULL)
+	{
+		treeObjectIterator servers(mainForm->GetBrowser(), mainForm->GetServerCollection());
+		pgServer *s;
 
-    while ((s=(pgServer*)servers.GetNextObject()) != 0)
-    {
-        cbServer->Append(s->GetIdentifier(), (void*)s);
-        if (s->GetConnected() && s->GetConnection()->GetHost() == conn->GetHost() && s->GetConnection()->GetPort() == conn->GetPort())
-        {
-             cbServer->SetSelection(cbServer->GetCount()-1);
-        }
-    }    
-    cbServer->SetFocus();
+		while ((s=(pgServer*)servers.GetNextObject()) != 0)
+		{
+			cbServer->Append(s->GetIdentifier(), (void*)s);
+			if (s->GetConnected() && s->GetConnection()->GetHost() == conn->GetHost() && s->GetConnection()->GetPort() == conn->GetPort())
+			{
+				 cbServer->SetSelection(cbServer->GetCount()-1);
+			}
+		}    
+		cbServer->SetFocus();
+	}
 
     wxCommandEvent ev;
     OnChangeServer(ev);
