@@ -18,7 +18,7 @@
       
       <size>135,12d</size>
       
-      <style>wxCB_READONLY|wxCB_DROPDOWN</style>
+      <style>wxCB_DROPDOWN</style>
     </object>
     <object class="wxStaticText" name="stDatabase">
       
@@ -34,7 +34,15 @@
       
       <size>135,12d</size>
       
-      <style>wxCB_READONLY|wxCB_DROPDOWN</style>
+      <style>wxCB_DROPDOWN</style>
+    </object>
+    <object class="wxStaticText" name="stUsername">
+      <label>Username</label>
+      <pos>5,37d</pos>
+    </object>
+    <object class="wxTextCtrl" name="txtUsername">
+      <pos>65,35d</pos>
+      <size>135,-1d</size>
     </object>
     <object class="wxButton" name="wxID_HELP">
       
