@@ -35,6 +35,10 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-08-30 MH  1.6.0  Allow for -q to open query tool without opening
+                      main window. Add -qc switch to open query tool and
+                      autoconnect using a connection string.
+2006-08-30 MH  1.6.0  Disable splash-screen completely in debug builds.
 2006-08-29 MH  1.6.0  Add a New Window menu/toolbar to the query tool.
 2006-08-15 DP  1.6.0  Set focus on the filter textbox when opening the View
                       data filter options [Guillaume Lelarge]
